se modifica texto del boton que dirige al proyecto de la iguana

--- a/index_for_commits.html
+++ b/index_for_commits.html
@@ -188,7 +188,7 @@
                 <a
                   href="https://github.com/Diego-sanhueza/iguana_page/tree/main/Iguana_page_Diego_sanhueza"
                   class="btn btn-dark"
-                  >clic para revisar Proyecto</a
+                  >revisar Proyecto</a
                 >
               </div>
             </div>
